@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - moved core parts to Text::MarkdownTable, renamed 
 
 0.1.2  2014-06-25 11:23:48 CEST
     - better align with Catmandu::Exporter::CSV
